[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
#requires = ["setuptools>=46.1.0,<50", "setuptools_scm[toml]>=5", "wheel"]
requires = ["setuptools>=46.1.0,<50", "wheel"]
build-backend = "setuptools.build_meta"

# commented for prototype build, version will be set to 0.0.0
# ToDo investigate how to derive version from NGLS git
#[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
#version_scheme = "no-guess-dev"
